--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 <body >
         <div class="header">
                 <div class="all_w ">
-                  <div class="gofh"> <a href="my.html"><img src="images/jt_03.jpg" ></a> </div>
+                  <div class="gofh"> <a href="myInfo.php"><img src="images/jt_03.jpg" ></a> </div>
                   <div class="ttwenz">
                     <h4>联系我们</h4>
                   </div>
