--- a/tixian.html
+++ b/tixian.html
@@ -62,7 +62,7 @@ $(function(){
 <body>
 <div class="header">
   <div class="all_w ">
-    <div class="gofh"> <a href="my.html"><img src="images/jt_03.jpg" ></a> </div>
+    <div class="gofh"> <a href="myIfo.php"><img src="images/jt_03.jpg" ></a> </div>
     <div class="ttwenz">
       <h4>确认提现</h4>
       <h5>微信安全支付</h5>
