--- a/tixiansuccess.html
+++ b/tixiansuccess.html
@@ -27,14 +27,14 @@
 </style>
 </head>
 <body >
-<div class="header">
+<!-- <div class="header">
   <div class="all_w" style="position:relative; z-index:1;">
     <div class="ttwenz" style=" text-align:center; width:100%;">
       <h4>提现详情</h4>
       <h5>微信安全支付</h5>
     </div>
     <a href="index.html" class="fh_but"></a> </div>
-</div>
+</div> -->
 
 <div class="zfcg_box ">
 <div class="all_w">
@@ -91,7 +91,7 @@ document.getElementById('time').innerText=getNowFormatDate()
 
 </script>
 <div class="success_btn_wrap">
-  <a class="success_btn">完成跳转到我的</a>
+  <a class="success_btn" href="myInfo.php">完成</a>
 </div>
 <div class="wzxfcgde_tb"><img src="images/cg_07.jpg" ></div>
 </body>
